22-09-2009

Decided against the brute force solver in favour of a solver which
attempts to emulate the methods used by a human.

The trunk is currently able to assign single values and locate
'Hidden Singles'. As such it is now possible to complete some boards
classified as easy. Next step is to implement 'Locked Candidates'.

The information and naming for these methods come from 
http://angusj.com/sudoku/hints.php. This is an excellent resource and
I recommend it to anyone interested in Sudoku.

17-09-2009

Got the urge to redo this recently. Only took a few minutes.
It's a bit neater/better than the previous iteration.

Might work a bit on a brute force solver in the not too distant
future.

10-12-2008

The Sudoku generator is still a prototype and will most like have issues.
At the moment it uses a brute force method to generate a board.

A way to remove random digits and classify the difficulty of the board is
still outstanding.

There are also a large number of hardcoded values and few comments, but I
will update this when I get a chance.