@@ -1,29 +1,7 @@
-This small python script is able to generate a complete sudoku board
-using a brute force method.
+A small Python application to both solve and generate Sudoku boards.
 
-Starting in the top left hand corner of the board:
-1. Collect all the values in the current row (horizontal)
-2. Collect all the values in the current column (vertical)
-3. Collect all the values in the current block
-4. Generate a list of all values which don't appear in any
-of the collected values
-5. Place a random available number in the current position
-6. Shift to the next position to the right and repeat steps
-1-5 until all positions are filled.
+All code is licensed under the latest GPL.
 
-If the board is not complete, but there are no available values
-for the current position, destroy the board and restart
-with a blank one. Not a very good use of resources and may be 
-revised at a later date.
-
-The beginnings of a solver are also underway. Instead of going
-the usual route and using a brute force method to solve, I've
-decided to rather attempt something closer to human interaction.
-This will have the added benefit of being able to more accurately
-measure the difficulty of generated boards.
-
-All code is licensed under the latest GPL
-
-Feel free to contact me with any questions/suggestions
+Feel free to contact me with any questions/suggestions.
 
 shivermail at gmail dot com
